# word_search

./: CMakeLists.txt  README.md  dict.cc  dict.h  grid.cc  grid.h  main.cc  test.cc  word_search.cc  word_search.h
word_search/: .gitignore  package-lock.json  package.json  tsconfig.json
word_search/src/: App.tsx  Coordinate.tsx  Dictionary.tsx  HighlightedCells.tsx  WordGrid.css  WordGrid.tsx  WordGridComponent.css  WordGridComponent.tsx
